# wayland-mouse

./: Cargo.toml  LICENSE  README.md  install.sh  scroll-accel.conf  scroll-accel.service  uninstall.sh  wayland-mouse.service  wayland-mouse.toml.example
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  desktop.rs  device.rs  install.rs  ipc.rs  main.rs  pointer.rs  remap.rs  tune.rs  util.rs  wheel.rs
