[package]
name = "wayland-mouse"
version = "0.4.3"
edition = "2021"
description = "Mac-like mouse acceleration for Wayland — pointer + scroll-wheel, tuned below the compositor via evdev/uinput."
license = "MIT"
repository = "https://github.com/monfa-red/wayland-mouse"
homepage = "https://github.com/monfa-red/wayland-mouse"
readme = "README.md"
keywords = ["wayland", "mouse", "acceleration", "evdev", "scroll"]
categories = ["command-line-utilities", "hardware-support"]
rust-version = "1.74"

[[bin]]
name = "wayland-mouse"
path = "src/main.rs"

[dependencies]
evdev = "0.12"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
arc-swap = "1"
# Live-tuning TUI client; pulled in by the (default) `tune` feature.
ratatui = { version = "0.29", optional = true }

[features]
# `tune` ships the ratatui live-tuning UI. On by default; build the daemon
# without it via `cargo build --no-default-features` for a leaner binary.
default = ["tune"]
tune = ["dep:ratatui"]

[profile.release]
opt-level = 3
lto = true
panic = "abort"
